<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/myUploads"
            android:icon="@drawable/ic_uploads"
            android:title="@string/my_uploads"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/feedBack"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/contactUs"
            android:icon="@drawable/ic_number"
            android:title="@string/contact_us"/>

        <item
            android:id="@+id/rateUs"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us"/>

        <item
            android:id="@+id/aboutUs"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>