<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".fragment.HomeFragment1">
    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_worry_cheashu_is_here"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/cheashu_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:layout_above="@+id/btnOwner"
        android:id="@+id/btnRental"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_facebook_button_background_color"
        android:text="@string/i_am_a_renter"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />
    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnOwner"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tw__composer_red"
        android:text="@string/my_home_for_rent"
        android:textSize="20sp"
        android:layout_gravity="bottom"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:textColor="@android:color/white"
        />
    </RelativeLayout>
</LinearLayout>