<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragment.FeedbackFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".fragment.FeedbackFragment"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/please_share_your_feedback"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_margin="5dp"
    android:textColor="@android:color/black"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:background="@drawable/rectangle_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_issue"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:padding="10dp"
        />
<EditText
    android:id="@+id/etF1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/please_tell_us_issue_in_detail"
    android:padding="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_crash_or_poor_performance"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/etF2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_tell_us_issue_in_detail"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_not_added_real_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/etF3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_tell_us_issue_in_detail"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_already_booked"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/etF4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_tell_us_issue_in_detail"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other issue"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/etF5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_tell_us_issue_in_detail"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much_satisfied_you"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="10dp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:stepSize="0.5"
            android:numStars="5"
            android:rating="5"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/rectangle_background2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        />


</LinearLayout>
</ScrollView>