<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity"
    android:background="@drawable/gradient_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/holo_red_dark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/dialog_holo_dark_frame">

                <Button
                    android:id="@+id/btnPg"
                    android:text="@string/pg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:background="@android:drawable/dialog_holo_dark_frame"
                    android:padding="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />
            <Button
                android:id="@+id/btnFamily"
                android:layout_below="@+id/btnPg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:padding="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                />
            </RelativeLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/holo_orange_dark"/>
<RelativeLayout
    android:background="@android:drawable/dialog_holo_dark_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBachelorBoys"
            android:text="@string/bachelor_only_for_boys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            />

    <Button
        android:layout_below="@+id/btnBachelorBoys"
        android:id="@+id/btnBachelorGirls"
        android:text="@string/bachelor_only_for_girls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:padding="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />
</RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/holo_red_dark"/>
        <RelativeLayout
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnBachelorBoysGirls"
            android:text="@string/bachelor_for_both_girls_and_boys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            />
            <Button
                android:layout_below="@+id/btnBachelorBoysGirls"
                android:id="@+id/btnBachelorFamily"
                android:text="@string/bachelor_or_family_both"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:padding="8dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/holo_green_dark"/>
        <RelativeLayout
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_or_showroom"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="8dp"
                />

            <Button
            android:layout_below="@+id/btnShop"
            android:id="@+id/btnMarriageHall"
            android:text="@string/marriage_hall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/holo_red_dark"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>